--- a/css/styles.css
+++ b/css/styles.css
@@ -8,12 +8,35 @@
   --color-studio: #000000;
 }
 
+* {
+  margin: 0;
+  padding: 0;
+}
+
 body {
   font-family: "Roboto", sans-serif;
   color: var(--color-text-primary);
 }
 
+.container {
+  max-width: 1200px;
+  margin: 0 auto;
+}
+
+.section {
+  padding: 94px 0;
+}
+
 /* header start */
+
+.header {
+  border-bottom: #ececec 1px solid;
+}
+
+.header .container {
+  display: flex;
+  align-items: center;
+}
 
 .logo {
   font-family: "Raleway", sans-serif;
@@ -21,10 +44,19 @@ body {
   color: var(--color-studio);
   text-decoration: none;
   color: inherit;
+  margin-right: 70px;
 }
 
 .blue-web {
   color: var(--color-text-hover);
+}
+
+.menu {
+  display: flex;
+  list-style-type: none;
+  width: 254px;
+  padding: 32px 0;
+  justify-content: space-between;
 }
 
 .menu-link {
@@ -39,6 +71,9 @@ body {
 
 .contact {
   color: var(--color-text-light);
+  list-style-type: none;
+  display: flex;
+  margin-left: 371px;
 }
 
 .contact-link:hover,
@@ -49,18 +84,32 @@ body {
 .contact-link {
   text-decoration: none;
   color: inherit;
+  margin: 0 25px;
 }
 
 /* header end */
 
 /* main start */
 
-.baner h1 {
-  font-size: 44px;
-  line-height: 1.4;
+.baner {
+  background-color: var(--color-background-footer);
 }
 
-.btn-studio {
+.baner .container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.container h1 {
+  font-size: 44px;
+  line-height: 1.4;
+  color: var(--color-white);
+  margin-bottom: 30px;
+  text-align: center;
+}
+
+.container .btn-studio {
   padding: 10px 41px;
   background-color: var(--color-text-hover);
   color: var(--color-white);
@@ -72,9 +121,21 @@ body {
   cursor: pointer;
 }
 
+.lorem-ipsum ul {
+  display: flex;
+  justify-content: space-between;
+  text-align: justify;
+}
+
+.lorem-ipsum li {
+  width: 270px;
+  list-style: none;
+}
+
 .lorem-ipsum h3 {
   font-size: 14px;
   line-height: 1.17214;
+  margin-bottom: 10px;
 }
 
 .lorem-ipsum p {
@@ -87,10 +148,25 @@ body {
 .team h2 {
   font-size: 36px;
   line-height: 1.171945;
+  display: flex;
+  justify-content: center;
+  margin-bottom: 50px;
+}
+
+.what-we-do ul {
+  display: flex;
+  list-style: none;
+  justify-content: space-between;
 }
 
 .team {
   background-color: var(--color-lightgray);
+}
+
+.team ul {
+  display: flex;
+  list-style: none;
+  justify-content: space-between;
 }
 
 .team figure {
@@ -102,11 +178,28 @@ body {
 
 .team .name {
   font-weight: 500;
+  display: flex;
+  justify-content: center;
+  padding: 30px 0 10px 0;
 }
 
 .team .job-position {
   color: var(--color-text-light);
   line-height: 1.171875;
+  display: flex;
+  justify-content: center;
+  padding-bottom: 30px;
+}
+
+.list-btn-portfolio {
+  list-style: none;
+  display: flex;
+  justify-content: center;
+  margin: 94px 0 0 0;
+}
+
+.list-btn-portfolio li {
+  margin: 0 4px;
 }
 
 .btn-portfolio {
@@ -125,6 +218,17 @@ body {
   color: var(--color-white);
 }
 
+.portfolio-boxes {
+  display: flex;
+  list-style: none;
+  flex-wrap: wrap;
+  justify-content: space-between;
+}
+
+.portfolio-boxes li {
+  margin: 15px 0;
+}
+
 .portfolio-boxes figure {
   border: 1px solid #eeeeee;
   background-color: var(--color-white);
@@ -134,11 +238,13 @@ body {
   font-size: 18px;
   font-weight: 700;
   line-height: 2;
+  margin: 20px 0 0 24px;
 }
 
 .portfolio-filtr {
   color: var(--color-text-light);
   line-height: 1.875;
+  margin: 0 0 20px 24px;
 }
 
 /*  footer start*/
@@ -157,6 +263,19 @@ body {
 
 .footer p {
   color: var(--color-white);
+}
+
+.contact-footer {
+  color: var(--color-text-light);
+  list-style-type: none;
+}
+
+.address {
+  margin-top: 20px;
+}
+
+.address ul {
+  list-style: none;
 }
 
 .address a {
